[package]
name = "coggle-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.3"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }
